# mbfa

./: .gitignore  Cargo.toml  LICENSE  README.md  bench.sh  big_recovered.txt  big_test.txt  encoder_recovered.rs  index.html  mbfa_log_Audio_WAV_44KB.txt  mbfa_log_Image_BMP_29KB.txt  mbfa_log_JSON_100KB.txt  mbfa_log_Prose_Alice_100KB.txt  mbfa_log_Prose_WarAndPeace_3MB.txt  mbfa_log_Repetitive_2MB.txt  mbfa_log_Source_1MB.txt  offset_profile.txt  recovered.txt  results.json  test.txt  visual.html
.github/: benchmark-template.html  corpus-template.html
.github/workflows/: mbfa-ci.yml  mbfa-corpus.yml
bench_files/: alice_small.txt  repetitive.txt
benches/: compare.rs
builds/build_109/: index.html  mbfa_log_Audio_WAV_44KB.txt  mbfa_log_Image_BMP_29KB.txt  mbfa_log_JSON_100KB.txt  mbfa_log_JSON_2MB.txt  mbfa_log_Prose_Alice_100KB.txt  mbfa_log_Prose_Alice_20KB.txt  mbfa_log_Prose_WarAndPeace_3MB.txt  mbfa_log_Random_10KB.txt  mbfa_log_Repetitive_12KB.txt  mbfa_log_Repetitive_2MB.txt  mbfa_log_Source_1MB.txt  mbfa_log_Source_Code.txt  results.json
builds/build_113/: index.html  mbfa_log_Source_Code.txt  results.json
builds/build_114/: index.html  mbfa_log_Audio_WAV_44KB.txt  mbfa_log_JSON_100KB.txt  mbfa_log_JSON_2MB.txt  mbfa_log_Prose_Alice_100KB.txt  mbfa_log_Prose_Alice_20KB.txt  mbfa_log_Random_10KB.txt  (+3 more)
corpus/: index.html  results.json
others/: ProjectStructure.txt  _note.mdix  reader.json
src/: bitreader.rs  bitwriter.rs  decoder.rs  encoder.rs  entropy.rs  filters.rs  fold.rs  lib.rs  main.rs  opcode.rs  pairing.rs  profile_offsets.rs  unfold.rs
(+171 files in other folders)
